# puzzlefs

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
builder/: Cargo.toml
builder/src/: fastcdc_fs.rs  lib.rs
builder/test/test-2/: pdb3  slabtop
common/src/: lib.rs
compression/: Cargo.toml
compression/src/: lib.rs  noop.rs  zstd.rs  zstd_seekable_wrapper.rs  zstd_wrapper.rs
doc/: chunking.md  index.md  metadata.md
docs/: _config.yml  index.md
docs/_posts/: 2023-10-30-Linux-kernel-setup.md
exe/: .gitignore  Cargo.toml
exe/src/: main.rs
exe/tests/: cleanup_verity_device.sh  extract.rs  helpers.rs  setup_verity_device.sh  verity.rs
exe/tests/helpers/: mod.rs
exe/tests/verity_setup/: mod.rs
extractor/: Cargo.toml
extractor/src/: lib.rs
format/: Cargo.toml  build.rs  manifest.capnp  metadata.capnp
format/src/: error.rs  lib.rs  types.rs
format/src/types/: cbor_helpers.rs
fsverity_helpers/: Cargo.toml
fsverity_helpers/src/: lib.rs
oci/: Cargo.toml
oci/src/: descriptor.rs  index.rs  lib.rs  media_types.rs
puzzlefs-lib/: Cargo.toml  build.rs
puzzlefs-lib/src/: builder.rs  compression.rs  extractor.rs  format.rs  fsverity_helpers.rs  lib.rs  oci.rs  reader.rs
puzzlefs-lib/src/builder/: Cargo.toml  filesystem.rs
puzzlefs-lib/src/compression/: noop.rs  zstd_seekable_wrapper.rs  zstd_wrapper.rs
puzzlefs-lib/src/extractor/: Cargo.toml
puzzlefs-lib/src/format/: error.rs  metadata.capnp  types.rs
puzzlefs-lib/src/oci/: descriptor.rs  index.rs  media_types.rs
puzzlefs-lib/src/reader/: Cargo.toml  fuse.rs  puzzlefs.rs  walk.rs
reader/: Cargo.toml
reader/src/: error.rs  fuse.rs  lib.rs  puzzlefs.rs  walk.rs
