[package]
name = "builder"
version = "0.1.0"
authors = ["Tycho Andersen <tycho@tycho.pizza>"]
edition = "2018"

[dependencies]
compression = { path = "../compression" }
format = { path = "../format" }
oci = { path = "../oci" }
reader = { path = "../reader" }
fsverity_helpers = { path = "../fsverity_helpers" }
walkdir = "2"
serde_cbor = "*"
fastcdc = "3.0.0"
nix = "*"
hex = "*"

[dev-dependencies]
tempfile = "*"
serde = "*"
fastrand = "*"
anyhow = "*"
