[package]
name = "compression"
version = "0.1.0"
authors = ["Tycho Andersen <tycho@tycho.pizza>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd-seekable = "*"
zstd = "0.12.3"
common = {path = "../common"}

[dev-dependencies]
tempfile = "*"
anyhow = "*"
