[package]
name = "puzzlefs"
version = "0.1.0"
authors = ["Tycho Andersen <tycho@tycho.pizza>"]
edition = "2018"

[dependencies]
anyhow = "*"
nix = "*"
clap = { version = "4.0.18", features = ["derive"] }
daemonize = { git = "https://github.com/ariel-miculas/daemonize.git" }
ctrlc = "3.2.0"
log = "0.4.17"
env_logger = "0.9.3"
syslog = "6.0.1"
os_pipe = "1.1.2"
format = { path = "../format" }
builder = { path = "../builder" }
oci = { path = "../oci" }
reader = { path = "../reader" }
extractor = { path = "../extractor" }
fsverity_helpers = { path = "../fsverity_helpers" }
compression = { path = "../compression" }
hex = "*"

[dev-dependencies]
assert_cmd = "*"
dir-diff = "*"
tempfile = "*"
walkdir = "2"
