[package]
name = "puzzlefs"
version = "0.2.0"
authors = ["Tycho Andersen <tycho@tycho.pizza>", "Ariel Miculas <amiculas@cisco.com>"]
description = """
PuzzleFS is a next-generation container filesystem.
"""
documentation = "https://github.com/project-machine/puzzlefs"
homepage = "https://github.com/project-machine/puzzlefs"
repository = "https://github.com/project-machine/puzzlefs"
keywords = ["fuse", "filesystem", "container", "cdc"]
categories = ["filesystem"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
nix = {version = "0.27.1", features = ["mount"] }
clap = { version = "4.0.18", features = ["derive"] }
# Version 0.5 drops exit_action so we're stuck with 0.4
daemonize = "0.4.1"
ctrlc = "3.2.0"
log = "0.4.17"
env_logger = "0.9.3"
syslog = "6.0.1"
os_pipe = "1.1.2"
puzzlefs-lib = { path = "../puzzlefs-lib", version = "0.2.0" }
hex = "0.4.3"
libmount = "0.1.15"

[dev-dependencies]
assert_cmd = "2.0.12"
dir-diff = "0.3.2"
tempfile = "3.10"
walkdir = "2"
