[package]
name = "extractor"
version = "0.1.0"
authors = ["Ariel Miculas <amiculas@cisco.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
nix = "*"
xattr = "*"
format = { path = "../format" }
builder = { path = "../builder" }
oci = { path = "../oci" }
reader = { path = "../reader" }

[dev-dependencies]
tempfile = "*"
walkdir = "2"
