[package]
name = "format"
version = "0.1.0"
authors = ["Tycho Andersen <tycho@tycho.pizza>"]
edition = "2021"

[dependencies]
serde = { version = "^1.0.27", features = [ "derive" ] }
serde_json = "*"
nix = "*"
xattr = "*"
thiserror = "1.0.46"
hex = "*"
memmap2 = "0.5.10"
capnp = "0.17"

[build-dependencies]
capnpc = "0.17"
