[package]
name = "fsverity_helpers"
version = "0.1.0"
authors = ["Ariel Miculas <amiculas@cisco.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
format = { path = "../format" }
compression = { path = "../compression" }
fs-verity = "0.2.0"
hex = "*"
sha2 = "0.10.6"
