[package]
name = "oci"
version = "0.1.0"
authors = ["Tycho Andersen <tycho@tycho.pizza>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "*"
sha2 = "0.10.6"
tempfile = "*"
compression = { path = "../compression" }
format = { path = "../format" }
fsverity_helpers = { path = "../fsverity_helpers" }
serde = { version = "^1.0.27", features = [ "derive" ] }
serde_json = "*"
openat = "0.1.21"
