[package]
name = "reader"
version = "0.1.0"
authors = ["Tycho Andersen <tycho@tycho.pizza>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compression = { path = "../compression" }
format = { path = "../format" }
oci = { path = "../oci" }
fuse = "*"
time = "0.1.44"
nix = "*"

[dev-dependencies]
builder = { path = "../builder" }
tempfile = "*"
sha2 = "*"
hex = "*"
xattr = "*"
