[package]
name = "builder"
version = "0.1.0"
authors = ["Tycho Andersen <tycho@tycho.pizza>"]
edition = "2021"

[dependencies]
compression = { path = "../compression" }
format = { path = "../format" }
oci = { path = "../oci" }
reader = { path = "../reader" }
fsverity_helpers = { path = "../fsverity_helpers" }
common = { path = "../common" }
walkdir = "2"
fastcdc = "3.0.0"
nix = "*"
hex = "*"
capnp = "0.17"

[dev-dependencies]
tempfile = "*"
serde = "*"
anyhow = "*"
